# tutorials

./: README.md
.github/: get_compile_command.py
.github/workflows/: build.yml  linux-build.yml  python_test.yml  windows-build.yml
cpp/: CMAKELists.txt  CMakeLists.txt
cpp/src/: tutorial0_get_device_info.cpp  tutorial0_set_device_info.cpp  tutorial1_display.cpp  tutorial2_control_camera.cpp  tutorial3_getting_frame_count.cpp  tutorial4_save_data.cpp  tutorial4_save_gendc_data.cpp  tutorial4_save_image_bin_data.cpp  tutorial5_parse_gendc_data.cpp  tutorial5_parse_image_bin_data.cpp  tutorial5_parse_image_data.cpp
cuda/: README.md  cuda-ion-setup.sh
cuda/src/: load_and_process.cpp
gstreamer/: tutorial1_display.py
python/: tutorial0-getdeviceinfo.py  tutorial0_get_device_info.py  tutorial0_set_device_info.py  tutorial1_display.py  tutorial1_display_2cam.py  tutorial2_control_camera.py  tutorial3_getting_frame_count.py  tutorial4_save_data.py  tutorial4_save_gendc.py  tutorial4_save_gendc_data.py  tutorial4_save_image_bin_data.py  tutorial5_parse_gendc_data.py  tutorial5_parse_image_bin_data.py  tutorial5_visualize_gendc_data.py
test/cpp/: CMakeLists.txt
test/cpp/src/: fake_camera_display.cpp  fake_camera_save.cpp  parse_dummy_gendc_data.cpp  parse_dummy_image_data.cpp  parse_gendc_data_dummy.cpp  parse_image_bin_data_dummy.cpp  parse_image_data_dummy.cpp
test/python/: fake_camera_display.py  fake_camera_save.py  parse_dummy_gendc_data.py  parse_image_bin_data_dummy.py
